--- a/src/pages/Home/Profile.css
+++ b/src/pages/Home/Profile.css
@@ -229,6 +229,7 @@
   max-width: 100%;
   width: 960px;
   aspect-ratio: 3 / 4;
+  max-height: 540px;
   position: relative;
 
   &::before {
